deploy/argo-app-manifest/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: yt-downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      imagePullSecrets:
        - name: github-secret
      containers:
        - name: django
          image: ghcr.io/infinity-step/final_project/django:latest
          volumeMounts:
            - mountPath: "/app/media"
              name: django-storage
      volumes:
        - name: django-storage
          persistentVolumeClaim:
            claimName: django-pvc
