deploy/argo-app-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: yt-downloader
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: yt-downloader
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: yt-downloader
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
