deploy/argo-app-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: yt-downloader
spec:
  ingressClassName: nginx
  rules:
    - host: yt-downloader.k8s-23.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
